import stats::median

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -234,6 +234,7 @@ export(parquet_statistics)
 export(pl)
 export(polars_info)
 import(rlang)
+importFrom(stats,median)
 importFrom(utils,findMatches)
 importFrom(utils,head)
 useDynLib(neopolars, .registration = TRUE)
