use exportS3Method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,7 +141,6 @@ S3method(length,polars_lazy_frame)
 S3method(length,polars_series)
 S3method(max,polars_series)
 S3method(mean,polars_series)
-S3method(median,polars_series)
 S3method(min,polars_series)
 S3method(names,polars_data_frame)
 S3method(names,polars_lazy_frame)
@@ -167,6 +166,7 @@ S3method(print,polars_info)
 S3method(print,polars_lazy_frame)
 S3method(print,polars_object)
 S3method(print,polars_series)
+S3method(stats::median,polars_series)
 S3method(sum,polars_series)
 S3method(utils::.DollarNames,polars_data_frame)
 S3method(utils::.DollarNames,polars_dtype)
@@ -233,7 +233,6 @@ export(parquet_statistics)
 export(pl)
 export(polars_info)
 import(rlang)
-importFrom(stats,median)
 importFrom(utils,findMatches)
 importFrom(utils,head)
 useDynLib(neopolars, .registration = TRUE)
