--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,8 @@ S3method(as_polars_series,vctrs_unspecified)
 S3method(dim,polars_data_frame)
 S3method(dim,polars_lazy_frame)
 S3method(format,polars_dtype)
+S3method(head,polars_data_frame)
+S3method(head,polars_lazy_frame)
 S3method(infer_polars_dtype,"NULL")
 S3method(infer_polars_dtype,ArrowTabular)
 S3method(infer_polars_dtype,AsIs)
@@ -168,6 +170,8 @@ S3method(print,polars_object)
 S3method(print,polars_series)
 S3method(stats::median,polars_series)
 S3method(sum,polars_series)
+S3method(tail,polars_data_frame)
+S3method(tail,polars_lazy_frame)
 S3method(utils::.DollarNames,polars_data_frame)
 S3method(utils::.DollarNames,polars_dtype)
 S3method(utils::.DollarNames,polars_dtype_enum)
