use exportS3Method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,8 +122,6 @@ S3method(as_polars_series,vctrs_unspecified)
 S3method(dim,polars_data_frame)
 S3method(dim,polars_lazy_frame)
 S3method(format,polars_dtype)
-S3method(head,polars_data_frame)
-S3method(head,polars_lazy_frame)
 S3method(infer_polars_dtype,"NULL")
 S3method(infer_polars_dtype,ArrowTabular)
 S3method(infer_polars_dtype,AsIs)
@@ -170,8 +168,6 @@ S3method(print,polars_object)
 S3method(print,polars_series)
 S3method(stats::median,polars_series)
 S3method(sum,polars_series)
-S3method(tail,polars_data_frame)
-S3method(tail,polars_lazy_frame)
 S3method(utils::.DollarNames,polars_data_frame)
 S3method(utils::.DollarNames,polars_dtype)
 S3method(utils::.DollarNames,polars_dtype_enum)
@@ -199,6 +195,10 @@ S3method(utils::.DollarNames,polars_namespace_series_struct)
 S3method(utils::.DollarNames,polars_rolling_group_by)
 S3method(utils::.DollarNames,polars_series)
 S3method(utils::.DollarNames,polars_sql_context)
+S3method(utils::head,polars_data_frame)
+S3method(utils::head,polars_lazy_frame)
+S3method(utils::tail,polars_data_frame)
+S3method(utils::tail,polars_lazy_frame)
 S3method(wrap,PlRChainedThen)
 S3method(wrap,PlRChainedWhen)
 S3method(wrap,PlRDataFrame)
