--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,8 +28,12 @@ Suggests:
     ggplot2,
     hms,
     jsonlite,
+    knitr,
+    mirai,
     nanoarrow (>= 0.6.0),
     patrick (>= 0.3.0),
+    purrr,
+    rmarkdown,
     testthat (>= 3.0.0),
     tibble,
     vctrs,
@@ -45,3 +49,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 SystemRequirements: Cargo (Rust's package manager), rustc
+VignetteBuilder: knitr
