--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ S3method(">",polars_expr)
 S3method(">",polars_series)
 S3method(">=",polars_expr)
 S3method(">=",polars_series)
+S3method("[",polars_data_frame)
 S3method("[",polars_namespace_expr_struct)
 S3method("[",polars_namespace_series_struct)
 S3method("[",polars_object)
