--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -97,3 +97,4 @@ jobs:
               echo "One or more man pages are duplicated in mkdocs.yml."
               exit 1
           fi
+        shell: bash
