--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ S3method(">",polars_series)
 S3method(">=",polars_expr)
 S3method(">=",polars_series)
 S3method("[",polars_data_frame)
+S3method("[",polars_lazy_frame)
 S3method("[",polars_namespace_expr_struct)
 S3method("[",polars_namespace_series_struct)
 S3method("[",polars_object)
