--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Config/Needs/lint: fs, lintr
 Config/Needs/website: etiennebacher/altdoc, future.apply
 Config/testthat/edition: 3
 Config/testthat/parallel: true
-Config/testthat/start-first: lazyframe-frame, *-s3-base, expr-expr, expr-*
+Config/testthat/start-first: lazyframe-frame, *-s3-base, polars_options,
+    expr-expr, expr-*
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
