--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -37,7 +37,16 @@ thiserror = "2"
 [target.'cfg(not(target_os = "emscripten"))'.dependencies.polars]
 git = "https://github.com/pola-rs/polars.git"
 rev = "a0e3e3817783ba70a9791cf6a1cf6778de372e33"
-features = ["cloud", "extract_jsonpath", "json", "parquet"]
+features = [
+    "aws",
+    "azure",
+    "cloud",
+    "extract_jsonpath",
+    "gcp",
+    "http",
+    "json",
+    "parquet",
+]
 
 [target.'cfg(not(target_os = "emscripten"))'.dependencies.polars-lazy]
 git = "https://github.com/pola-rs/polars.git"
