--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Suggests:
     mirai (>= 2.3.0),
     nanoarrow (>= 0.6.0),
     patrick (>= 0.3.0),
+    pkgload,
     testthat (>= 3.0.0),
     tibble,
     vctrs,
