docs: fix about the `nycflights13` package installation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Suggests:
     jsonlite,
     mirai (>= 2.3.0),
     nanoarrow (>= 0.6.0),
+    nycflights13,
     patrick (>= 0.3.0),
     pkgload,
     testthat (>= 3.0.0),
