refactor: Rename class names `polars_info` and `polars_options` to avoid conflict with polars0 package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,10 +163,10 @@ S3method(print,PlRWhen__bundle)
 S3method(print,polars_data_frame)
 S3method(print,polars_dtype)
 S3method(print,polars_expr)
-S3method(print,polars_info)
+S3method(print,polars_info_list)
 S3method(print,polars_lazy_frame)
 S3method(print,polars_object)
-S3method(print,polars_options)
+S3method(print,polars_options_list)
 S3method(print,polars_series)
 S3method(stats::median,polars_series)
 S3method(sum,polars_series)
