need devel version purrr

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,8 @@ Suggests:
     tibble (>= 3.3.0),
     vctrs,
     withr
+Remotes:
+    tidyverse/purrr
 Config/Needs/dev: devtools, lifecycle, readr, glue
 Config/Needs/lint: fs, lintr
 Config/Needs/website: etiennebacher/altdoc, future.apply
