ci: fix shared-key of rust cache

--- a/.github/workflows/release-lib.yml
+++ b/.github/workflows/release-lib.yml
@@ -67,7 +67,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: "src/rust -> target"
-          shared-key: ${{ matrix.target }}
+          shared-key: ${{ matrix.target }}-release # TODO: change to dist-release
 
       - name: prep for musl
         if: endsWith(matrix.target, '-musl')
