ci: fix required r package

--- a/.github/workflows/release-lib.yml
+++ b/.github/workflows/release-lib.yml
@@ -84,7 +84,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          packages: any::pkgbuild
+          packages: any::pkgbuild, deps::.
+          dependencies: "'hard'"
 
       - name: build lib
         env:
