--- a/.github/workflows/release-lib.yml
+++ b/.github/workflows/release-lib.yml
@@ -1,19 +1,15 @@
-name: release-lib
+name: Release binary libraries
 on:
   push:
     tags:
       - "lib-v*"
-    branches:
-      - main
   pull_request:
     branches:
       - main
     paths:
       - .github/workflows/release-lib.yml
-      - src/rust/**
+      - configure*
       - src/Makevars*
-      - tools/**
-      - "!tools/lib-sums.tsv"
   workflow_dispatch:
 
 concurrency:
