--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "r-polars"
-version = "0.1.0"
+version = "1.0.0-alpha.1"
 edition = "2024"
 rust-version = "1.85.0"
 publish = false
