ci(release-lib): Fix sha256sum text file's format [skip ci]

--- a/.github/workflows/release-lib.yml
+++ b/.github/workflows/release-lib.yml
@@ -218,7 +218,7 @@ jobs:
       - name: create checksums
         working-directory: libs
         run: |
-          sha256sum ./* >"../sha256sums.txt"
+          find . -type f | cut -c3- | xargs sha256sum >"../sha256sums.txt"
 
       - name: create release
         uses: softprops/action-gh-release@v2
