--- a/altdoc/mkdocs.yml
+++ b/altdoc/mkdocs.yml
@@ -703,6 +703,7 @@ nav:
         - s3-as_tibble: man/s3-as_tibble.md
         - s3-as.data.frame: man/s3-as.data.frame.md
         - s3-as.list: man/s3-as.list.md
+        - s3-arithmetic: man/s3-arithmetic.md
       SQL Interface:
         - SQLContext: man/pl__SQLContext.md
         - sql_context__execute: man/sql_context__execute.md
