--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,3 +49,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 SystemRequirements: Cargo (Rust's package manager), rustc
+VignetteBuilder: knitr
