--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Suggests:
     nycflights13,
     patrick (>= 0.3.0),
     pkgload,
+    rmarkdown,
     testthat (>= 3.0.0),
     tibble (>= 3.3.0),
     vctrs,
