--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -106,8 +106,7 @@ jobs:
           NOT_CRAN: "false"
         with:
           upload-snapshots: true
-          # TODO: remove this line once R CMD check is ok
-          error-on: '"error"'
+          error-on: '"warning"'
 
   # TODO: use Taskfile on this job
   test-r:
