chore!: Rename the package from neopolars to polars and bump version

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -121,7 +121,7 @@ jobs:
         id: build-docs
         shell: Rscript {0}
         run: |
-          library(neopolars)
+          library(polars)
           rmarkdown::render("altdoc/reference_home.Rmd")
           future::plan(future::multicore)
           altdoc::render_docs(freeze = FALSE, parallel = TRUE, verbose = TRUE)
