--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: neopolars
+Package: polars
 Title: R Bindings for the 'polars' Rust Library
-Version: 0.0.0.9000
+Version: 0.0.9000.9000
 Authors@R: c(
     person("Tatsuya", "Shima", , "ts1s1andn@gmail.com", role = c("aut", "cre")),
     person("Etienne", "Bacher", , "etienne.bacher@protonmail.com", role = "aut",
@@ -40,7 +40,7 @@ Suggests:
 Config/Needs/dev: devtools, lifecycle, readr, glue, RcppTOML, semver
 Config/Needs/lint: fs, lintr
 Config/Needs/website: etiennebacher/altdoc, future.apply
-Config/neopolars/lib-version: 1.0.0-alpha.2
+Config/polars/lib-version: 1.0.0-alpha.2
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Config/testthat/start-first: lazyframe-frame, *-s3-base, polars_options,
