--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,7 @@ S3method("$",polars_rolling_group_by)
 S3method("$",polars_series)
 S3method("$",polars_sql_context)
 S3method("$<-",polars_object)
-S3method("$<-",savvy_neopolars__sealed)
+S3method("$<-",savvy_polars__sealed)
 S3method("%%",polars_expr)
 S3method("%%",polars_series)
 S3method("%/%",polars_expr)
@@ -62,7 +62,7 @@ S3method("[",polars_namespace_series_struct)
 S3method("[",polars_object)
 S3method("[<-",polars_object)
 S3method("[[<-",polars_object)
-S3method("[[<-",savvy_neopolars__sealed)
+S3method("[[<-",savvy_polars__sealed)
 S3method("^",polars_expr)
 S3method("|",polars_expr)
 S3method(as.data.frame,polars_data_frame)
@@ -243,4 +243,4 @@ export(polars_options_reset)
 import(rlang)
 importFrom(utils,findMatches)
 importFrom(utils,head)
-useDynLib(neopolars, .registration = TRUE)
+useDynLib(polars, .registration = TRUE)
