--- a/altdoc/mkdocs.yml
+++ b/altdoc/mkdocs.yml
@@ -718,7 +718,7 @@ nav:
       Other:
         - check_polars: man/check_polars.md
         - pl_api_register_series_namespace: man/pl_api_register_series_namespace.md
-        - neopolars-package: man/neopolars-package.md
+        - polars-package: man/polars-package.md
         - pl: man/pl.md
         - polars_duration_string: man/polars_duration_string.md
         - polars_options: man/polars_options.md
