--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,9 @@ Suggests:
     tibble (>= 3.3.0),
     vctrs,
     withr
-Config/Needs/dev: devtools, lifecycle, readr, glue, RcppTOML, semver
+VignetteBuilder: 
+    knitr
+Config/Needs/dev: devtools, lifecycle, readr, glue, RcppTOML, smvr
 Config/Needs/lint: fs, lintr
 Config/Needs/website: etiennebacher/altdoc, future.apply
 Config/polars/lib-version: 1.0.0-alpha.2
@@ -51,4 +53,3 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 SystemRequirements: Cargo (Rust's package manager), rustc
-VignetteBuilder: knitr
