--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method("$",polars_namespace_series_list)
 S3method("$",polars_namespace_series_str)
 S3method("$",polars_namespace_series_struct)
 S3method("$",polars_object)
+S3method("$",polars_partitioning_scheme)
 S3method("$",polars_rolling_group_by)
 S3method("$",polars_series)
 S3method("$",polars_sql_context)
@@ -156,6 +157,7 @@ S3method(print,PlRDataType__bundle)
 S3method(print,PlRExpr__bundle)
 S3method(print,PlRLazyFrame__bundle)
 S3method(print,PlRLazyGroupBy__bundle)
+S3method(print,PlRPartitioning__bundle)
 S3method(print,PlRSQLContext__bundle)
 S3method(print,PlRSeries__bundle)
 S3method(print,PlRThen__bundle)
@@ -194,6 +196,7 @@ S3method(utils::.DollarNames,polars_namespace_series_dt)
 S3method(utils::.DollarNames,polars_namespace_series_list)
 S3method(utils::.DollarNames,polars_namespace_series_str)
 S3method(utils::.DollarNames,polars_namespace_series_struct)
+S3method(utils::.DollarNames,polars_partitioning_scheme)
 S3method(utils::.DollarNames,polars_rolling_group_by)
 S3method(utils::.DollarNames,polars_series)
 S3method(utils::.DollarNames,polars_sql_context)
@@ -208,6 +211,7 @@ S3method(wrap,PlRDataType)
 S3method(wrap,PlRExpr)
 S3method(wrap,PlRLazyFrame)
 S3method(wrap,PlRLazyGroupBy)
+S3method(wrap,PlRPartitioning)
 S3method(wrap,PlRSQLContext)
 S3method(wrap,PlRSeries)
 S3method(wrap,PlRThen)
