--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -143,7 +143,7 @@ tasks:
       - dev/generate-lib-sums.R
       - tools/prep-lib.R
       - DESCRIPTION
-      - "{{.CARGO_LOCK}}"
+      - "{{.MANIFEST}}"
     generates:
       - tools/lib-sums.tsv
     cmds:
