--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -42,6 +42,7 @@ thiserror = "2"
 [target.'cfg(not(target_os = "emscripten"))'.dependencies.polars]
 git = "https://github.com/pola-rs/polars.git"
 rev = "171c8474b11e9e62209f5f7f03615f24fe62da98"
+default-features = false
 features = [
     "aws",
     "azure",
@@ -59,16 +60,19 @@ features = [
 [target.'cfg(not(target_os = "emscripten"))'.dependencies.polars-lazy]
 git = "https://github.com/pola-rs/polars.git"
 rev = "171c8474b11e9e62209f5f7f03615f24fe62da98"
+default-features = false
 features = ["new_streaming"]
 
 [target.'cfg(not(target_os = "emscripten"))'.dependencies.polars-mem-engine]
 git = "https://github.com/pola-rs/polars.git"
 rev = "171c8474b11e9e62209f5f7f03615f24fe62da98"
+default-features = false
 features = ["csv", "ipc", "json", "parquet"]
 
 [dependencies.polars]
 git = "https://github.com/pola-rs/polars.git"
 rev = "171c8474b11e9e62209f5f7f03615f24fe62da98"
+default-features = false
 features = [
     "abs",
     "approx_unique",
@@ -95,6 +99,7 @@ features = [
     "ewma_by",
     "extract_groups",
     "find_many",
+    "fmt",
     "fused",
     "hist",
     "iejoin",
