--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -56,6 +56,12 @@ jobs:
       contents: write
 
     steps:
+      - name: more space for debug build
+        if: runner.os == 'Linux'
+        run: |
+          du -hsc /usr/local/lib/*
+          sudo rm -rf /usr/local/lib/android || true
+
       - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-pandoc@v2
