--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -57,6 +57,12 @@ jobs:
           - devel
           - "4.3"
     steps:
+      - name: more space for debug build
+        if: runner.os == 'Linux'
+        run: |
+          du -hsc /usr/local/lib/*
+          sudo rm -rf /usr/local/lib/android || true
+
       - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-pandoc@v2
