docs(altdoc): fix index

--- a/altdoc/mkdocs.yml
+++ b/altdoc/mkdocs.yml
@@ -698,6 +698,7 @@ nav:
         - scan_parquet: man/pl__scan_parquet.md
         - sink_parquet: man/lazyframe__sink_parquet.md
         - write_parquet: man/dataframe__write_parquet.md
+        - partitioning_scheme: man/polars_partitioning_scheme.md
       S3 methods:
         - s3-as_nanoarrow_array_stream: man/s3-as_nanoarrow_array_stream.md
         - s3-as_tibble: man/s3-as_tibble.md
