feat: `pl$thread_pool_size()`

--- a/altdoc/mkdocs.yml
+++ b/altdoc/mkdocs.yml
@@ -724,5 +724,6 @@ nav:
         - polars_options: man/polars_options.md
         - polars_info: man/polars_info.md
         - show_versions: man/pl__show_versions.md
+        - thread_pool_size: man/pl__thread_pool_size.md
   - About: about.md
   - Changelog: NEWS.md
