feat: add check functions for partitioning scheme and tweak docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -225,6 +225,7 @@ export(check_polars_df)
 export(check_polars_dtype)
 export(check_polars_expr)
 export(check_polars_lf)
+export(check_polars_partitioning_scheme)
 export(check_polars_selector)
 export(check_polars_series)
 export(cs)
@@ -236,6 +237,7 @@ export(is_polars_df)
 export(is_polars_dtype)
 export(is_polars_expr)
 export(is_polars_lf)
+export(is_polars_partitioning_scheme)
 export(is_polars_selector)
 export(is_polars_series)
 export(parquet_statistics)
