--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -89,6 +89,7 @@ features = [
     "cse",
     "cum_agg",
     "cutqcut",
+    "decompress",
     "diagonal_concat",
     "diff",
     "dot_diagram",
