R.utils in suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Suggests:
     patrick (>= 0.3.0),
     pkgload,
     rmarkdown,
+    R.utils,
     testthat (>= 3.0.0),
     tibble (>= 3.3.0),
     vctrs,
