build(taskfile): Ensure installing rustfmt before the `cargo fmt` command

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -262,6 +262,7 @@ tasks:
     generates:
       - "{{.RUST_SOURCE}}"
     cmds:
+      - rustup component add rustfmt
       - cargo fmt --all
 
   format-devscripts:
