fix: Add `tail` import from utils to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -248,4 +248,5 @@ export(polars_options_reset)
 import(rlang)
 importFrom(utils,findMatches)
 importFrom(utils,head)
+importFrom(utils,tail)
 useDynLib(polars, .registration = TRUE)
