fix: Remove deprecated `cat$set_ordering` and fix `str$concat`'s default value

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "r-polars"
-version = "1.0.0-beta.2"
+version = "1.0.0-rc.1"
 edition = "2024"
 rust-version = "1.85.0"
 publish = false
